# Exchange

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/crypto/: ExchangeLog.cpp  ExchangeLog.h  native-lib.cpp
app/src/main/cpp/test/crypto/: ExchangeLogTest.cpp
app/src/main/java/com/android/exchange/: CoinExchangeRateApplication.kt  MainActivity.kt
app/src/main/java/com/android/exchange/adapter/: CoinExchangeRateAdapter.kt  DiffUtilCallBack.kt
app/src/main/java/com/android/exchange/api/: CoinExchangeRateService.kt  RetrofitHelper.kt
app/src/main/java/com/android/exchange/binding/: ViewBindingAdapter.kt
app/src/main/java/com/android/exchange/data/: MarketsResponse.kt  PriceResponse.kt
app/src/main/java/com/android/exchange/db/: CryptoDao.kt  CryptoDatabase.kt
app/src/main/java/com/android/exchange/fragment/: CoinExchangeRateFragment.kt
app/src/main/java/com/android/exchange/model/: CryptoData.kt
app/src/main/java/com/android/exchange/repository/: CoinExchangeRateRepository.kt  CoinExchangeRateRepositoryImpl.kt  NativeBase.kt  NativeClassImpl.kt
app/src/main/java/com/android/exchange/util/: Utils.kt
app/src/main/java/com/android/exchange/viewmodel/: CoinExchangeRateViewModel.kt  CoinExchangeRateViewModelFactory.kt
app/src/main/res/drawable/: bitcoin.xml  ic_add.xml  ic_search.xml
app/src/main/res/layout/: coin_exchange_header.xml  coin_exchange_item.xml  coin_exchange_rate_fragment.xml
app/src/main/res/menu/: more_menu.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
